fixed moodbuttons on smallscreen

--- a/src/shared/components/Button/MoodButton.css
+++ b/src/shared/components/Button/MoodButton.css
@@ -1,7 +1,7 @@
 .mood-button{
-    padding: 0 21px 0 20px;
+    padding: 0 10px 0 10px;
     margin:  5px 5px 5px 5px;
-    height:36px;
+    height:34px;
     border-radius: 23px;
     font-size: 1em;
     text-align: center;  
